--- a/project.html
+++ b/project.html
@@ -3,9 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Expense Tracker</title>
+    <title>Stock Price Tracker</title>
+    <link rel="stylesheet" href="styles/project.css">
 </head>
 <body>
-    Expense Tracker
+    <div class="textbox">
+        <img class="logo" src="styles/candlestick-chart.png" alt="Stock Price Tracker">
+        <h1>Stock Price Tracker</h1>
+    </div>
+    <hr>
+    <div>
+        <label for="stockSymbol">Enter Stock Symbol:</label>
+        <div id="searchbar">
+            <div class="wrapper">
+                <div class="searchBar">
+                    <input type="text" id="stockSymbol" placeholder="IBM">
+                    <button id="fetchStockPrice">
+                        <svg style="width:24px;height:24px" viewBox="0 0 24 24"><path fill="#666666" d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
+                        </svg>
+                  </button>
+                </div>
+              </div>
+        </div>
+        
+    </div>
+    <div id="fundamentalData">
+        <div class="textbox">
+            <img class="logo" src="styles/disclosure.png" alt="Stock Information">
+            <h3>Stock Information</h3>
+        </div>
+        <hr>
+        <div class="stockinfo">
+            <div id="fundamentalSymbol"></div>
+            <div id="fundamentalName"></div>
+            <div id="fundamentalIndustry"></div>
+            <div id="fundamentalMarketCap"></div>
+            <div id="fundamentalExchange"></div>
+            <div id="fundamental52WeekHigh"></div>
+            <div id="fundamental52WeekLow"></div>
+            <div id="fundamental50DayMovingAverage"></div>
+            <div id="fundamental200DayMovingAverage"></div>
+            <div id="fundamentalSharesOutstanding"></div>
+        </div>
+    </div>
+    <div id="stockInfo">
+    </div>
+    <div id="stockChart">
+    </div>
+    <div id="historicalPrices">
+        <div class="textbox">
+            <img class="logo" src="styles/fluctuation.png" alt="Historical Prices">
+            <h3>Historical Prices</h3>
+        </div>
+        <hr>
+        <label for="dateFilter">Select Date:</label>
+        <input type="date" id="dateFilter">
+        <ul id="historicalPriceList"></ul>
+    </div>
+    <script type="module" src="scripts/project.js"></script>
 </body>
 </html>
