--- a/project.html
+++ b/project.html
@@ -49,6 +49,12 @@
     <div id="stockInfo">
     </div>
     <div id="stockChart">
+        <iframe
+            src="https://www.tradingview.com/symbols/NASDAQ-AAPL/?theme=light"
+            style="width: 100%; height: 300px;"
+            frameborder="0"
+            allowfullscreen
+        ></iframe>
     </div>
     <div id="historicalPrices">
         <div class="textbox">
@@ -58,6 +64,7 @@
         <hr>
         <label for="dateFilter">Select Date:</label>
         <input type="date" id="dateFilter">
+        <button id="resetFilter">Remove Filter</button>
         <ul id="historicalPriceList"></ul>
     </div>
     <script type="module" src="scripts/project.js"></script>
