--- a/project.html
+++ b/project.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stock Price Tracker</title>
+    <link rel="icon" type="image/png" href="styles/candlestick-chart.png">
     <link rel="stylesheet" href="styles/project.css">
 </head>
 <body>
@@ -49,12 +50,6 @@
     <div id="stockInfo">
     </div>
     <div id="stockChart">
-        <iframe
-            src="https://www.tradingview.com/symbols/NASDAQ-AAPL/?theme=light"
-            style="width: 100%; height: 300px;"
-            frameborder="0"
-            allowfullscreen
-        ></iframe>
     </div>
     <div id="historicalPrices">
         <div class="textbox">
